# exam-to-html

./: .gitignore  LICENSE  README.md  adversarial-review-report.md  pyinstaller.spec  pyproject.toml  version.json
.github/workflows/: build.yml
docs/: build-windows.md  distribution-design.md
docs/ui-prototypes/: 01-drop-and-go.html  02-workbench.html  02b-workbench-warm.html  03-one-desk.html  04-desk-drawer.html  index.html
exam_to_html/: __init__.py  __main__.py  app.py  config.py  errors.py  logging_setup.py  paths.py  updater.py
exam_to_html/backend/: __init__.py  _ocr_fix.py  _post_process_md.py  _qnum_fallback.py  exam_renderer.py  pipeline.py  server.py
exam_to_html/gui/: __init__.py  server.py  window.py
exam_to_html/gui/static/: app.js  index.html  style.css
exam_to_html/templates/: exam.html
examples/: demo_via_pdf2ppt.py
pdf2ppt/: .gitignore  __init__.py  _chem_text.py  _katex_renderer.py  _phys_postprocess.py  _phys_text.py  _qnum_rule.py  _v2_models.py  _v2_parser.py  _v3_a3_splitter.py
tests/: conftest.py  test_adversarial_fixes.py  test_errors.py  test_k2k3_parser.py  test_smoke.py  test_updater.py
