[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-to-html"
version = "0.1.0"
description = "试卷 PDF → HTML 讲评课件生成器 · 高中物理教师桌面工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Zhewen Liu", email = "zhewenliu@example.com" },
]
keywords = ["courseware", "physics", "education", "exam", "pdf-to-html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Education",
]

# topic-garden 仍是兄弟仓 (DB / composer 依赖)；
# PDF2PPT v2 parser 子集已 vendored 到本仓顶层 pdf2ppt/,
# topic_garden.ingest 的 `from pdf2ppt...` 会命中本地包,
# 不再需要 `pip install -e ../PDF2PPT`。
# dev 模式按 README 步骤:
#     pip install -e ../topic_garden_app
# 然后再 `pip install -e .` 或 `pip install -e ".[dev]"`。
# PyInstaller frozen 模式: 打包前确保 topic-garden 已装进同一 venv。
dependencies = [
    # 用 ~= 锁大版本 (PEP 440): 允许最后一位 patch/minor 浮动, 但阻止
    # 大版本变更 (e.g. fastapi 0.x → 1.x, pydantic 1.x → 2.x, peewee 3.x → 4.x)。
    # 不锁会撞上 PyMuPDF 1.28 改 None 行为 (CI 文档记录 case)。
    "topic-garden~=0.18",        # 兄弟仓, 0.19 schema 大改 (Tuple 缺失等) 未跟
    "pywebview~=4.4",
    "fastapi~=0.110",
    "uvicorn[standard]~=0.27",
    "python-multipart~=0.0.9",   # FastAPI multipart/form-data 必需
    "requests~=2.31",            # 检查更新 / MinerU API 调用
]

# precision 模式（带【单选】【多选】徽章）需要 MinerU SDK。
# flash 模式（默认）不需要, 教师开箱即用。
[project.optional-dependencies]
precision = [
    "mineru-open-sdk~=0.2.5",   # flash_extract / precision 入口
]
dev = [
    "pytest~=7.0",
    "pytest-xdist~=3.0",        # 并行加速 (conftest 已设 worker_id DB 隔离)
    "httpx2~=2.0",              # starlette.testclient 0.48+ 强制要求 httpx2
    # CI smoke E2E 走 vendored pdf2ppt.MinerUParser, _get_client() 调
    # `from mineru import MinerU` — flash 模式也走。MinerU SDK 又依赖 PyMuPDF
    # 抽页; 没这俩, 真实 PDF 必返 drafts=0。锁大版本避免 PyMuPDF 1.28+
    # 改 None 行为 / MinerU 0.3 schema 大改。
    "mineru-open-sdk~=0.2.5",
    "pymupdf~=1.24",
]

[project.scripts]
exam-to-html = "exam_to_html.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Asteriya-PhD/exam-to-html"
"topic-garden" = "https://github.com/Asteriya-PhD/topic_garden_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["exam_to_html*", "pdf2ppt*"]

[tool.setuptools.package-data]
"exam_to_html.gui" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]